2011-08-04    <simleo@neuron.crs4.it>

	* bl/vl/utils/snp.py (_identify_strand): simpler implementation
	that works with sequences containing non-ACGT letters (basically,
	anything that's not explicitly defined as unambiguous is
	ambiguous). After skipping indels, this version correctly
	identifies all illumina 'TopGenomicSeq' masks as TOP (see
	tests/bl/vl/utils/check_strand_vs_ann.py).

2011-08-03    <zag@manzanillo>

	* bl/vl/app/importer/diagnosis.py: Changed to new style.

	* bl/vl/app/importer/data_collection.py: Changed to new style.

	* bl/vl/app/importer/data_object.py: Changed to new style.

	* bl/vl/app/importer/data_sample.py: Changed to new style.

2011-08-03    <simleo@neuron.crs4.it>

	* bl/vl/app/check_rs.py: changed to convert all masks to TOP
	before doing anything with them.

	* bl/vl/utils/snp.py: rewrote to work without side effects on a
	split mask (this is emphasized by the fact that a split mask is
	now a tuple). Added join_mask.

2011-08-03    <zag@manzanillo>

	* bl/vl/app/importer/data_sample.py: Major rewrite. Now it has, at
	least in spirit, a code structure similar to the one of
	biosample.py and the rest.

	* models/actions.ome.xml: Specialized Device some more, now we
	have Chip (derived from Device) and Scanner (derived from
	HardwareDevice). We have SoftwareProgram too (derived from Device)

 	* bl/vl/app/importer/biosample.py: now it can be used to import
	PlateWells. Removed plate_well.py.

2011-08-02    <simleo@neuron.crs4.it>

	* bl/vl/app/check_rs.py: does not read the full annotation table
	into memory anymore.
	(SnpAnnReader): changed to use bl.vl.utils.snp.split_mask to split
	masks and to return a (label, rs_label, split_mask) tuple.

	* bl/vl/utils/snp.py: code cleanup; convert_to_top now supports
	split masks.

2011-08-01    <zag@manzanillo>

	* galaxy/tools/VL/tools/map_vid.xml: Added.

	* galaxy/tools/VL/importer/biosample.xml: Added

	* galaxy: Renamed galaxy_ui to galaxy. Restructured to be easily